--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "laboratory-3",
   "version": "1.0.0",
-  "main": "expo/AppEntry.js",
+  "main": "expo-router/entry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -9,13 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~51.0.28",
-    "expo-status-bar": "~1.12.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.11",
+    "expo-status-bar": "~2.0.0",
+    "react": "18.3.1",
+    "react-native": "0.76.3",
     "react-native-paper": "^5.12.5",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-vector-icons": "^10.2.0",
+    "expo-router": "~4.0.9",
+    "react-native-screens": "~4.1.0",
+    "expo-linking": "~7.0.3",
+    "expo-constants": "~17.0.3",
+    "@expo/vector-icons": "^14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
